# machine-learning

./: .gitignore  main.py  pyproject.toml
models/: cnn.py  cnn_temp.py  forest.py  model.py  nn.py
saved_models/cnn/: 2026-04-26_16-53-55.pt
saved_models/nn/: 2026-04-26_17-44-06.pt
